CPG-DEV/src/objects/Substitute_Product__c.object
<CustomObject>
    <description>Junction between Product and Competitor Product</description>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <formula>Competitor_Product__r.Competitor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Product</label>
        <referenceTo>Competitor_Product__c</referenceTo>
        <relationshipLabel>Related Cargill Products</relationshipLabel>
        <relationshipName>Related_Cargill_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Competitive Match</relationshipLabel>
        <relationshipName>Substitute_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Product</label>
    <nameField>
        <displayFormat>SP-{0000000}</displayFormat>
        <label>Substitute Product Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Substitute Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>